fix: footer animation alignment

--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -25,7 +25,7 @@ footer {
   .line-wrapper {
     position: absolute;
     top: 50%;
-    left: 0%;
+    left: 3%;
     transform: translate(-50%, -50%);
     span {
       width: 30px;
